@@ -1,3 +1,7 @@
+2007-07-03  KUBO Takehiro  <kubo@jiubao.org>
+	* lib/DBD/OCI8/OCI8.rb: fix for external OS authentication.
+	    (contributed by Dan Fitch)
+
 2007-07-01  KUBO Takehiro  <kubo@jiubao.org>
 	* NEWS: add changes between 1.0.0-rc2 and 1.0.0-rc3.
 	* VERSION: change version to 1.0.0-rc3.
